adding the index.html and the readme.md files

--- a/css_advanced/index.html
+++ b/css_advanced/index.html
@@ -8,7 +8,7 @@
     <title>School Homepage</title>
 </head>
 <body>
-    <header>
+    <header class="background">
         <nav>
             <img src="assets/logo.png" alt="logo">
             <ul>
@@ -20,7 +20,7 @@
     </header>
 
     <main>
-        <section>
+        <section class="background">
             <div>
                 <h1>GET SCHOOLED</h1>
                 <p>
