updated header/first section

--- a/headphones/0-index.html
+++ b/headphones/0-index.html
@@ -40,5 +40,16 @@
             </nav>
         </div>
     </header>
+
+      <!-- Hero Section -->
+    <section class="hero">
+        <div class="hero-content">
+            <h1>Lorem ipsum dolor set amet lorem ipsum</h1>
+            <p>Lorem ipsum dolor set amet lorem ipsum dolor set</p>
+            <a href="#" class="cta-button">CALL TO ACTION</a>
+        </div>
+    </section>
+</body>
+</html>
 </body>
 </html>
